"""Initial tender management models

Revision ID: a7529c1f184c
Revises:
Create Date: 2025-11-25 20:54:01.441305

"""

from typing import Sequence, Union

import sqlalchemy as sa
from alembic import op

# revision identifiers, used by Alembic.
revision: str = "a7529c1f184c"
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "stages",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("name", sa.String(), nullable=False),
        sa.Column("code", sa.String(), nullable=False),
        sa.Column("description", sa.String(), nullable=True),
        sa.Column("required_role", sa.String(), nullable=True),
        sa.Column("requires_all_positions_calculated", sa.Boolean(), nullable=False),
        sa.Column("requires_commercial_proposal", sa.Boolean(), nullable=False),
        sa.Column("order", sa.Integer(), nullable=False),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("name"),
    )
    op.create_index(op.f("ix_stages_code"), "stages", ["code"], unique=True)
    op.create_index(op.f("ix_stages_id"), "stages", ["id"], unique=False)
    op.create_table(
        "stage_transitions",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("from_stage_id", sa.Integer(), nullable=False),
        sa.Column("to_stage_id", sa.Integer(), nullable=False),
        sa.Column("auto_create_tasks", sa.JSON(), nullable=True),
        sa.Column("required_fields", sa.JSON(), nullable=True),
        sa.ForeignKeyConstraint(
            ["from_stage_id"],
            ["stages.id"],
        ),
        sa.ForeignKeyConstraint(
            ["to_stage_id"],
            ["stages.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_index(
        op.f("ix_stage_transitions_id"), "stage_transitions", ["id"], unique=False
    )
    op.create_table(
        "tenders",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("number", sa.String(), nullable=False),
        sa.Column("title", sa.String(), nullable=False),
        sa.Column("description", sa.Text(), nullable=True),
        sa.Column("source", sa.String(), nullable=False),
        sa.Column("source_url", sa.String(), nullable=True),
        sa.Column("deadline_at", sa.DateTime(timezone=True), nullable=False),
        sa.Column("published_at", sa.DateTime(timezone=True), nullable=True),
        sa.Column(
            "initial_max_price", sa.Numeric(precision=15, scale=2), nullable=True
        ),
        sa.Column("currency", sa.String(), nullable=False),
        sa.Column("stage_id", sa.Integer(), nullable=False),
        sa.Column("responsible_id", sa.Integer(), nullable=True),
        sa.Column("engineer_id", sa.Integer(), nullable=True),
        sa.Column("is_archived", sa.Boolean(), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column("updated_at", sa.DateTime(timezone=True), nullable=False),
        sa.ForeignKeyConstraint(
            ["stage_id"],
            ["stages.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_index(op.f("ix_tenders_id"), "tenders", ["id"], unique=False)
    op.create_index(op.f("ix_tenders_number"), "tenders", ["number"], unique=True)
    op.create_table(
        "positions",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("tender_id", sa.Integer(), nullable=False),
        sa.Column("name", sa.String(), nullable=False),
        sa.Column("description", sa.Text(), nullable=True),
        sa.Column("quantity", sa.Numeric(precision=10, scale=3), nullable=False),
        sa.Column("unit", sa.String(), nullable=False),
        sa.Column("nomenclature_id", sa.Integer(), nullable=True),
        sa.Column("technical_requirements", sa.JSON(), nullable=True),
        sa.Column("status", sa.String(), nullable=False),
        sa.Column("price_per_unit", sa.Numeric(precision=15, scale=2), nullable=True),
        sa.Column("total_price", sa.Numeric(precision=15, scale=2), nullable=True),
        sa.Column("currency", sa.String(), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.Column("updated_at", sa.DateTime(timezone=True), nullable=False),
        sa.ForeignKeyConstraint(
            ["tender_id"],
            ["tenders.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_index(op.f("ix_positions_id"), "positions", ["id"], unique=False)
    op.create_table(
        "tender_files",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("tender_id", sa.Integer(), nullable=False),
        sa.Column("filename", sa.String(), nullable=False),
        sa.Column("file_path", sa.String(), nullable=False),
        sa.Column("category", sa.String(), nullable=False),
        sa.Column("uploaded_by_id", sa.Integer(), nullable=False),
        sa.Column(
            "uploaded_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("now()"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["tender_id"],
            ["tenders.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_index(op.f("ix_tender_files_id"), "tender_files", ["id"], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f("ix_tender_files_id"), table_name="tender_files")
    op.drop_table("tender_files")
    op.drop_index(op.f("ix_positions_id"), table_name="positions")
    op.drop_table("positions")
    op.drop_index(op.f("ix_tenders_number"), table_name="tenders")
    op.drop_index(op.f("ix_tenders_id"), table_name="tenders")
    op.drop_table("tenders")
    op.drop_index(op.f("ix_stage_transitions_id"), table_name="stage_transitions")
    op.drop_table("stage_transitions")
    op.drop_index(op.f("ix_stages_id"), table_name="stages")
    op.drop_index(op.f("ix_stages_code"), table_name="stages")
    op.drop_table("stages")
    # ### end Alembic commands ###
